[metadata]
name = dict_zip
version = attr: dict_zip.__version__
author = James Murphy
author_email = james@mcoding.io
description = A fast iterator for corresponding dictionaries
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License, Version 2.0
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
url = https://github.com/mCodingLLC/dict_zip
classifiers = 
    Intended Audience :: Developers
    Development Status :: 3 - Alpha
    Programming Language :: C
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Operating System :: POSIX

[options]
packages = 
    dict_zip
package_dir =
    =src
python_requires = >=3.7
zip_safe = no

[options.package_data]
dict_zip = 
    py.typed
    __init__.pyi

[options.extras_require]
dev = 
    pytest >= 7.1
    tox >= 3.25
